MMT-3498: Fix Orbital gap, disable the scroll wheel for numbers

--- a/static/src/js/components/MetadataForm/MetadataForm.scss
+++ b/static/src/js/components/MetadataForm/MetadataForm.scss
@@ -9,3 +9,11 @@
   }
 }
 
+/** SCSS to removes up/down arrows when input type=number */
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
